# skill-learner

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
configs/: pipeline.yaml
configs/benchmarks/: fix_build_google_auto_sources.yaml  web_cybersecurity_connector_pack.yaml  web_cybersecurity_connector_preflight.yaml  web_cybersecurity_connector_smoke.yaml
frontend/: README.md  server.py
frontend/static/: app.js  index.html  styles.css
src/: .env.example
src/skill_learner/: __init__.py  cli.py  command_heuristics.py  env.py  models.py
src/skill_learner/connectors/: __init__.py  base.py  config.py  exploit_db.py  github_advisories.py  hackerone_reports.py  http.py  nuclei_templates.py  nvd.py  pentester_land.py  procedure.py  registry.py  runner.py  utils.py
src/skill_learner/extraction/: __init__.py  models.py  procedure.py
src/skill_learner/ingestion/: __init__.py  batch.py  fingerprint.py  ingest.py  sources.py  storage.py
src/skill_learner/normalization/: __init__.py  models.py  normalize.py
src/skill_learner/pipeline/: __init__.py  preview.py
src/skill_learner/synthesis/: __init__.py  cwe_catalog.py  models.py  openai_client.py  pipeline.py  skill_writer.py
tests/fixtures/: sample_doc.html  sample_doc.txt
tests/integration/: test_fix_build_pack_to_preview.py  test_generated_skill_validation.py  test_ingest_manifest_io.py  test_preview_to_skill_generation.py
tests/unit/: test_cli.py  test_command_heuristics.py  test_connector_config.py  test_domain_models.py  test_env_loader.py  test_exploit_db_connector.py  test_extraction_procedure.py  test_fingerprint.py  test_github_advisories_connector.py  test_hackerone_reports_connector.py  test_hackerone_skill_pipeline.py  test_imports.py  test_ingestion.py  test_ingestion_batch.py  test_models.py  test_normalization.py  test_nvd_connector.py  test_runner.py  test_sources.py  test_storage.py  test_synthesis_models.py  test_synthesis_writer.py
