[project]
name = "skill-learner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "jsonschema>=4.26.0",
    "markdown-it-py>=4.0.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "polars>=1.39.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pypdf>=6.9.2",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "scipy>=1.17.1",
    "tenacity>=9.1.4",
    "trafilatura>=2.0.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "hypothesis>=6.151.11",
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.9",
    "skills-ref>=0.1.1",
]
